--- a/our-page/index.html
+++ b/our-page/index.html
@@ -66,6 +66,29 @@
 </div>
 </div>
     </section>
+     
+    <section class="about-me">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-item .about-good">
+                    <h4>about-me</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adispiscing elit sed do
+                      eiusmod tempor incididunt ut nlabore et dolore magna aliqua. Quis
+                      ipsum suspendisse ultrices gravida Risus com odo viverrra maecenas.
+                    </p>
+                    <button>
+                      <a href="#">Download CV</a>
+                    </button>
+                  </div>
+                  <div class="Image about-item">
+                  <img src="./dove_183786569_1000.jpg"/>
+            </div>
+            </div>
+          </div>
+    </section>
+    
+
 
 </body>
 </html>
